--- a/harmonic-collection/Homepage/red/style.css
+++ b/harmonic-collection/Homepage/red/style.css
@@ -236,3 +236,8 @@ img{
     font-size: 16px;
     line-height: .6cm;
 }
+.nav{
+    font-family: arial;
+    margin-top: 250px;
+    position: fixed;
+}
