--- a/harmonic-collection/Homepage/brown/style.css
+++ b/harmonic-collection/Homepage/brown/style.css
@@ -77,6 +77,7 @@ img{
     object-position: center;
     padding: 10px;
 }
+
 .bear-overlay{
     position: absolute;
     margin-left: 90px;
@@ -452,10 +453,11 @@ img{
     -webkit-transform: scale(1.9);
     -ms-transform: scale(1.9);
 }
+/* This button guides to page with words and images */
 .button{
     border: none;
     outline: none;
-    background: #9a917b;
+    background: #dbd0b6;
     padding: 10px 30px;
     font-size: 19px;
     font-family: 'Times New Roman', Times, serif;
@@ -469,4 +471,10 @@ img{
     width: 2%;
     border-radius: 50%;
     font-family: arial;
+}
+.back{
+    font-size: 18px;
+    z-index: 15;
+    margin-left: 5px;
+    margin-top: 10px;
 }
