--- a/harmonic-collection/Homepage/brown/style2.css
+++ b/harmonic-collection/Homepage/brown/style2.css
@@ -120,7 +120,10 @@
     margin-top: 20px;
     margin-bottom: 90px;
     background-color: #6D462B;
-
+}
+.back{
+    font-size: 18px;
+    padding: 15px;
 }
 
 
