button color change

--- a/harmonic-collection/Homepage/brown/style.css
+++ b/harmonic-collection/Homepage/brown/style.css
@@ -457,7 +457,7 @@ img{
 .button{
     border: none;
     outline: none;
-    background: #dbd0b6;
+    background: #e4d9bf;
     padding: 10px 30px;
     font-size: 19px;
     font-family: 'Times New Roman', Times, serif;
