--- a/harmonic-collection/Homepage/navy/description.css
+++ b/harmonic-collection/Homepage/navy/description.css
@@ -2,9 +2,34 @@ body{
     background-color: #25243a;
     color: #c9c9f4;
 }
-.back{
-    height: 220px;
-    display: flex;
+.star{
+    width: 100%;
+    height: 25vh;
+}
+.star img{
+    height: 200px;
+    width: auto;
+}
+/* star shaking when hovered */
+.star:hover{
+    animation: rotate .7s ease-in-out both;
+}
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+    25%{
+        transform: rotate(3deg) translate3d(0, 0, 0);
+    }
+    50%{
+        transform: rotate(-3deg) translate3d(0, 0, 0);
+    }
+    75%{
+        transform: rotate(2deg) translate3d(0, 0, 0);
+    }
+    100%{
+        transform: rotate(0deg) translate3d(0, 0, 0);
+    }
 }
 .description{
     width: 100%;
