--- a/harmonic-collection/Homepage/navy/style.css
+++ b/harmonic-collection/Homepage/navy/style.css
@@ -23,10 +23,40 @@ body{
     display: flex;
     margin-top: 120px;
 }
+
+/* stars shaking when hovered */
+.star-2:hover{
+    animation: rotate .7s ease-in-out both;
+}
+.star-3:hover{
+    animation: rotate .7s ease-in-out both;
+}
+.star-4:hover{
+    animation: rotate .7s ease-in-out both;
+}
+@keyframes rotate {
+    0%{
+        transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+    25%{
+        transform: rotate(14deg) translate3d(0, 0, 0);
+    }
+    50%{
+        transform: rotate(-14deg) translate3d(0, 0, 0);
+    }
+    75%{
+        transform: rotate(8deg) translate3d(0, 0, 0);
+    }
+    100%{
+        transform: rotate(0deg) translate3d(0, 0, 0);
+    }
+    
+}
 img{
     width: 250px;
     height: auto;
 }
+
 .intro{
     display: flex;
     width: 100%;
