--- a/harmonic-collection/Homepage/white/style.css
+++ b/harmonic-collection/Homepage/white/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: #fcfbf5;
+    overflow-x: hidden;
+
 }
 .header{
     display: flex;
@@ -30,13 +32,107 @@ body{
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
 }
-.snow{
+.words{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #686868;
+    align-items: center;
+}
+    
+.words span{
+    font-size: 18px;
+    font-weight: bold;
+}
+.words p{
+    font-size: 17px;
+}
+.word{
     width: 100%;
-    height: 80vh;
-    color: #5b5b5a;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-.snow h5{
-    font-size: 28px;
+.word div{
     font-family: 'Times New Roman', Times, serif;
-    padding: 20px;
+    margin-top: 12px;
+    font-size: 14px;
 }
+.snow-grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 20px; 
+    max-width: 100%;
+    animation: slide 15s linear infinite;
+  }
+.snow-grid img{
+    width: 200px;
+    height: auto;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+/* animation for image grid sliding left to right */
+@keyframes slide { 
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+}
+.winter-grid img{
+    width: 480px;
+    height: auto;
+    aspect-ratio: 7/5;
+    object-fit: cover;
+}
+.angel-img img{
+    width: 390px;
+    height: auto;
+}
+
+.pillow-img img{
+    width: 600px;
+    height: auto;
+}
+
+.innocence-grid img{
+    width: 360px;
+    height: auto;
+}
+.peace-img img{
+    width: 350px;
+    animation: wave 1.3s linear infinite;
+}
+@keyframes wave {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-30px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  
+
+.rice-grid img{
+    height: 300px;
+    width: auto;
+}
+.paper-grid img{
+    width: 500px;
+    height: auto;
+    
+}
+.sculpture-img img{
+    width: 700px;
+    height: auto;
+}
+.toilet-img img{
+    height: 480px;
+    width: auto;
+}
+
