--- a/harmonic-collection/Homepage/red/style.css
+++ b/harmonic-collection/Homepage/red/style.css
@@ -9,8 +9,8 @@ body{
 }
 
 .header{
-    font-size: 30px;
-    word-spacing: 15cm;
+    font-size: 25px;
+    word-spacing: 15.3cm;
     display: flex;
     width: 100%;
     height: 6vh;
@@ -59,13 +59,33 @@ img{
     object-position: center;
 }
 
-.definition-container{
-    display: flex;
+.grid-container{
     width: 100%;
-    align-items:center;
-    justify-content: center;
+    height: 60vh;
+  }
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    grid-template-rows: repeat(3, 1fr);
+    width: 100%;
+    padding: 20px;
+    row-gap: 40px;
 }
-.definition{
-    color: #3a0c0a;
+.words{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: #380c0b;
+}
+.words h3{
     font-size: 17px;
 }
+@media all{
+
+}
+
+ 
