--- a/harmonic-collection/Homepage/blue/style.css
+++ b/harmonic-collection/Homepage/blue/style.css
@@ -38,14 +38,14 @@ body{
     padding: 9px;
 }
 .words{
-    width: 99%;
+    width: fit-content;
     height: fit-content;
     background-color: #5998e2;
     color: #163860;
     display: flex;
     position: absolute;
-    margin-left: 42%;
     z-index: -1;
+    margin-left: 42%;
     text-align: center;
 }
 .words-grid{
@@ -77,4 +77,28 @@ body{
       transform: translateY(0);
     }
   }
+
+@media all and (max-width:800px){
+    .header{
+        font-size: 20px;
+        word-spacing: 4.4cm;
+       }
+    
+    .description h4{
+        font-size: 27px;
+    }
+    .description p{
+        font-size: 14px;
+    }
+    .words img{
+        width: 220px;
+        height: auto;
+    }
+    .words p{
+        font-size: 14px;
+    }
+    .words{
+        font-size: 15px;
+    }
+}
   
