--- a/harmonic-collection/Homepage/yellow/style.css
+++ b/harmonic-collection/Homepage/yellow/style.css
@@ -35,7 +35,6 @@ body{
     scroll-behavior: smooth;
 }
 .slider img{
-    flex: 1 0 100%;
     scroll-snap-align: start;
     object-fit: cover;
 }
@@ -62,10 +61,13 @@ body{
     animation: moveBackAndForth 5s linear infinite;
 }
 .intro-text{
-    text-align: center;
+  width: 740px;
+  height: 10vh;
+  margin-left: 300px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
+
 /* Animation for "Yellow" moving back and forth */
 @keyframes moveBackAndForth {
     0% {
@@ -105,6 +107,49 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     color: #543507;
+  }
+  @media all and (max-width: 800px){
+    .header{
+      font-size: 19px;
+      word-spacing: 4.4cm;
+      z-index: 1;
+    }
+    .image-slide{
+      max-width: 14rem;
+    }
+    .text{
+      font-size: 12px;
+      color: #543507;
+    }
+    
+    .grid{
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(6, 1fr);  
+    }
+    .grid img{
+      width: 140px;
+    }
+    .grid h3{
+      font-size: 16px;
+    }
+    .words{
+      font-size: 15px;
+    } 
+    @keyframes moveBackAndForth {
+      0% {
+        transform: translateX(0px);
+      }
+    }
+    .intro{
+      font-size: 80px;
+      margin-left: 116px;
+    }
+    .intro-text{
+      margin-left: 1px;
+      font-size: 15px;
+      width: 510px;
+      text-align: center;
+    }
   }
 
  
