--- a/harmonic-collection/Homepage/purple/style.css
+++ b/harmonic-collection/Homepage/purple/style.css
@@ -38,7 +38,7 @@ body{
     outline: none;
     animation: animate 5s linear infinite;
 }
-/* Glowy text animation */
+/* Glowing text animation */
 @keyframes animate
 {
     0%
@@ -70,8 +70,8 @@ body{
     transition: all 0.5s ease;
     transform-style: preserve-3d;
     cursor: pointer;
-    
 }
+/* flip-card animation */
 .card:hover{
     transform: rotateY(180deg);
 }
