--- a/harmonic-collection/Homepage/green/style.css
+++ b/harmonic-collection/Homepage/green/style.css
@@ -27,8 +27,8 @@ body{
     cursor: pointer;
     width: 100%;
     height: 90vh;
-    
 }
+/* css codes for book-flip animation (watched youtube video) */
 .book:hover .cover{
     transform: rotateX(10deg) rotateY(-180deg);
 }
@@ -95,7 +95,7 @@ body{
 .book:hover .page:nth-child(6){
     transition-duration: 3.8s;
 }
-
+/* the content is written on the last page of the book */
 .last-page img{
     width: 300px;
     display: block;
@@ -124,6 +124,7 @@ body{
     color: #253529;
     font-family: 'Albert Sans', sans-serif;
 }
+/* images and vocabulary */
 .words{
     display: grid;
     width: 100%;
@@ -144,13 +145,7 @@ body{
     font-size: 20px;
     margin-top: 10px;
 }
-.back{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    margin-bottom: 70px;
-}
+
 @media all and (max-width:800px){
     .header{
         font-size: 20px;
